Added automatic www subdomain/cert creation 	modified:   dashboard/templates/yaml_templates/ingress_base.yaml

--- a/dashboard/templates/yaml_templates/ingress_base.yaml
+++ b/dashboard/templates/yaml_templates/ingress_base.yaml
@@ -18,7 +18,18 @@ spec:
             name: nginx
             port:
               number: 8080
+  - host: "www.{{ domain_name }}"
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: nginx
+            port:
+              number: 8080
   tls:
   - hosts:
     - {{ domain_name }}
+    - www.{{ domain_name }}
     secretName: {{ domain_name_dash }}-cert
