--- a/dashboard/templates/yaml_templates/pvc_base.yaml
+++ b/dashboard/templates/yaml_templates/pvc_base.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: kubepanel-sc  # This must match the PV's storageClassName
+  storageClassName: linstor-sc  # This must match the PV's storageClassName
   resources:
     requests:
       storage: 2Gi
