--- a/dashboard/templates/yaml_templates/php_base.yaml
+++ b/dashboard/templates/yaml_templates/php_base.yaml
@@ -17,12 +17,18 @@ spec:
      subdomain: "www"
      initContainers:
       - name: init
+        env:
+        - name: WP_PREINSTALL
+          value: {{ wp_preinstall }}
         image: docker.io/laszlokulcsar/init_php:v0.1
         imagePullPolicy: Always
         securityContext:
           capabilities:
             add: ["CAP_SYS_ADMIN"]
           privileged: true
+        volumeMounts:
+        - name: html-volume
+          mountPath: /usr/share/nginx/html
      containers:
       - name: php
         image: docker.io/laszlokulcsar/php:v0.1
