--- a/dashboard/templates/yaml_templates/backup-job.yaml
+++ b/dashboard/templates/yaml_templates/backup-job.yaml
@@ -11,27 +11,35 @@ spec:
         spec:
           restartPolicy: Never
           containers:
-            - name: snapshotter
-              image: laszlokulcsar/dashboard:v0.1
-              command:
-                - /bin/sh
-                - -c
-                - |
-                  # Random sleep between 0 and 3600 seconds (1 hour)
-                  SLEEP_TIME=$(( $RANDOM % 360 ))
-                  echo "Sleeping for ${SLEEP_TIME}s before snapshot..."
-                  sleep $SLEEP_TIME
-                  DATE=$(date +'%Y%m%d%H%M%S')
+          - name: snapshotter
+            image: laszlokulcsar/dashboard:v0.1
+            command:
+              - /bin/sh
+              - -c
+              - |
+                # Random sleep between 0 and 3600 seconds (1 hour)
+                SLEEP_TIME=$(( $RANDOM % 360 ))
+                echo "Sleeping for ${SLEEP_TIME}s before snapshot..."
+                sleep $SLEEP_TIME
+                DATE=$(date +'%Y%m%d%H%M%S')
 
-                  # Now create the snapshot
-                  kubectl apply -f - <<EOF
-                  apiVersion: snapshot.storage.k8s.io/v1
-                  kind: VolumeSnapshot
-                  metadata:
-                    name: {{ domain_name_dash }}-snapshot-$DATE
-                    namespace: {{ domain_name_dash }}
-                  spec:
-                    volumeSnapshotClassName: piraeus-snapshots
-                    source:
-                      persistentVolumeClaimName: {{ domain_name_dash }}-pvc
-                  EOF
+                # Now create the snapshot
+                kubectl apply -f - <<EOF
+                apiVersion: snapshot.storage.k8s.io/v1
+                kind: VolumeSnapshot
+                metadata:
+                  name: {{ domain_name_dash }}-snapshot-$DATE
+                  namespace: {{ domain_name_dash }}
+                spec:
+                  volumeSnapshotClassName: piraeus-snapshots
+                  source:
+                    persistentVolumeClaimName: {{ domain_name_dash }}-pvc
+                EOF
+                python manage.py add_snapshot -sn {{ domain_name_dash }}-snapshot-$DATE -d {{ domain_name }}
+            volumeMounts:
+            - name: html-volume
+              mountPath: /usr/share/nginx/html
+          volumes:
+          - name: html-volume
+            persistentVolumeClaim:
+              claimName: {{ domain_name_dash }}-pvc
