--- a/dashboard/templates/restore_templates/98-restore-job.yaml
+++ b/dashboard/templates/restore_templates/98-restore-job.yaml
@@ -6,6 +6,13 @@ metadata:
 spec:
   template:
     spec:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchLabels:
+                group: {{ domain_name_dash }}
+            topologyKey: "kubernetes.io/hostname"
       containers:
       - name: restore-job
         image: laszlokulcsar/watchdog:v0.1
