--- a/dashboard/templates/yaml_templates/backup-job.yaml
+++ b/dashboard/templates/yaml_templates/backup-job.yaml
@@ -21,7 +21,7 @@ spec:
           - name: snapshotter
             image: laszlokulcsar/watchdog:v0.1
             command:
-              - /bin/sh
+              - /bin/bash
               - -c
               - |
                 # Random sleep between 0 and 3600 seconds (1 hour)
