modified:   dashboard/templates/yaml_templates/backup-job.yaml

--- a/dashboard/templates/yaml_templates/backup-job.yaml
+++ b/dashboard/templates/yaml_templates/backup-job.yaml
@@ -17,7 +17,7 @@ spec:
                   matchLabels:
                     app: opendkim #because opendkim is running on the same node as kubepanel. fix this later
                 topologyKey: "kubernetes.io/hostname"
-          containers:
+          initContainers:
           - name: snapshotter
             image: laszlokulcsar/watchdog:v0.1
             command:
@@ -42,13 +42,15 @@ spec:
                   source:
                     persistentVolumeClaimName: {{ domain_name_dash }}-pvc
                 EOF
+          containers:
           - name: add-snapshot
             image: laszlokulcsar/dashboard:v0.1
             command:
               - /bin/sh
               - -c
               - |
-                python manage.py add_snapshot -sn {{ domain_name_dash }}-snapshot-$DATE -d {{ domain_name }}
+                DATE=$(date +'%Y%m%d%H%M%S')
+                python /kubepanel/manage.py add_snapshot -sn {{ domain_name_dash }}-snapshot-$DATE -d {{ domain_name }}
             volumeMounts:
             - name: kubepanel
               mountPath: /kubepanel
