--- a/dashboard/templates/restore_templates/98-restore-job.yaml
+++ b/dashboard/templates/restore_templates/98-restore-job.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   template:
     spec:
+      restartPolicy: Never
       affinity:
         podAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
