--- a/dashboard/templates/yaml_templates/pvc_base.yaml
+++ b/dashboard/templates/yaml_templates/pvc_base.yaml
@@ -10,3 +10,16 @@ spec:
   resources:
     requests:
       storage: 2Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ domain_name_dash }}-backup-pvc
+  namespace: {{ domain_name_dash }}
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: linstor-sc  # This must match the PV's storageClassName
+  resources:
+    requests:
+      storage: 2Gi
