--- a/dashboard/templates/yaml_templates/backup-job.yaml
+++ b/dashboard/templates/yaml_templates/backup-job.yaml
@@ -53,7 +53,7 @@ spec:
                   source:
                     persistentVolumeClaimName: {{ domain_name_dash }}-pvc
                 EOF
-                python /kubepanel/manage.py add_snapshot -sn {{ domain_name_dash }}-snapshot-$DATE -d {{ domain_name }}
+                python3 /kubepanel/manage.py add_snapshot -sn {{ domain_name_dash }}-snapshot-$DATE -d {{ domain_name }}
                 mysqldump --column-statistics=0 -h mariadb.kubepanel.svc.cluster.local -uroot -p$MARIADB_ROOT_PASSWORD $DBNAME > /backup/{{ domain_name_dash }}-snapshot-$DATE.sql
             volumeMounts:
             - name: kubepanel
