--- a/dashboard/templates/restore_templates/98-restore-job.yaml
+++ b/dashboard/templates/restore_templates/98-restore-job.yaml
@@ -32,6 +32,7 @@ spec:
               - /bin/sh
               - -c
               - |
+                kubectl annotate pods --all kubepanel.status='Restore in progress' -n {{ domain_name_dash }}
                 kubectl scale deployment/php --replicas=0 -n {{ domain_name_dash }}
                 kubectl scale deployment/nginx --replicas=0 -n {{ domain_name_dash }}
                 kubectl delete pvc/{{ domain_name_dash }}-pvc -n {{ domain_name_dash }}
@@ -53,7 +54,7 @@ spec:
                   accessModes:
                     - ReadWriteMany
                 EOF
+                mysql -h mariadb.kubepanel.svc.cluster.local -uroot -p$MARIADB_ROOT_PASSWORD $DBNAME < /backup/{{ volumesnapshot }}.sql
                 kubectl scale deployment/nginx --replicas=1 -n {{ domain_name_dash }}
                 kubectl scale deployment/php --replicas=1 -n {{ domain_name_dash }}
-                mysql -h mariadb.kubepanel.svc.cluster.local -uroot -p$MARIADB_ROOT_PASSWORD $DBNAME < /backup/{{ volumesnapshot }}.sql
   backoffLimit: 4
