--- a/dashboard/templates/yaml_templates/nginx_base.yaml
+++ b/dashboard/templates/yaml_templates/nginx_base.yaml
@@ -10,6 +10,8 @@ spec:
       app: nginx
       group: {{ domain_name_dash }}
   template:
+    annotations:
+      kubepanel.status: "Running"
     metadata:
       labels:
         app: nginx
