modified:   dashboard/templates/yaml_templates/nginx_base.yaml 	modified:   dashboard/templates/yaml_templates/php_base.yaml

--- a/dashboard/templates/yaml_templates/php_base.yaml
+++ b/dashboard/templates/yaml_templates/php_base.yaml
@@ -11,7 +11,7 @@ spec:
       group: {{ domain_name_dash }}
   template:
     annotations:
-      kubepanel.status: "Running"
+      kubepanel.status: "Started"
     metadata:
       labels:
         app: php
