--- a/dashboard/templates/restore_templates/98-restore-job.yaml
+++ b/dashboard/templates/restore_templates/98-restore-job.yaml
@@ -32,7 +32,7 @@ spec:
               - /bin/sh
               - -c
               - |
-                kubectl annotate pods --all kubepanel.status='Restore in progress' -n {{ domain_name_dash }}
+                kubectl annotate pods --all --overwrite kubepanel.status='Restore in progress' -n {{ domain_name_dash }}
                 kubectl scale deployment/php --replicas=0 -n {{ domain_name_dash }}
                 kubectl scale deployment/nginx --replicas=0 -n {{ domain_name_dash }}
                 kubectl delete pvc/{{ domain_name_dash }}-pvc -n {{ domain_name_dash }}
