modified:   dashboard/models.py 	modified:   dashboard/templates/main/add_domain.html 	modified:   dashboard/templates/restore_templates/98-restore-job.yaml 	modified:   dashboard/templates/yaml_templates/nginx_base.yaml 	modified:   dashboard/templates/yaml_templates/php_base.yaml 	modified:   dashboard/templates/yaml_templates/pvc_base.yaml 	modified:   dashboard/views.py

--- a/dashboard/templates/restore_templates/98-restore-job.yaml
+++ b/dashboard/templates/restore_templates/98-restore-job.yaml
@@ -46,7 +46,7 @@ spec:
                   storageClassName: linstor-sc
                   resources:
                     requests:
-                      storage: 2Gi
+                      storage: {{ storage_size }}
                   dataSource:
                     apiGroup: snapshot.storage.k8s.io
                     kind: VolumeSnapshot
