--- a/dashboard/templates/yaml_templates/nginx_base.yaml
+++ b/dashboard/templates/yaml_templates/nginx_base.yaml
@@ -26,6 +26,10 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
       - name: nginx
+        resources:
+          limits:
+            cpu: "{{ new_domain.cpu_limit }}m"
+            memory: "{{ new_domain.mem_limit }}Mi"
         image: docker.io/laszlokulcsar/nginx:v0.1
         imagePullPolicy: Always
         ports:
@@ -37,6 +41,10 @@ spec:
         - name: html-volume
           mountPath: /usr/share/nginx/html
       - name: sftp
+        resources:
+          limits:
+            cpu: "100m"
+            memory: "64Mi"
         image: docker.io/laszlokulcsar/sftp:v0.1
         imagePullPolicy: Always
         ports:
