--- a/dashboard/templates/yaml_templates/pvc_base.yaml
+++ b/dashboard/templates/yaml_templates/pvc_base.yaml
@@ -9,7 +9,7 @@ spec:
   storageClassName: linstor-sc  # This must match the PV's storageClassName
   resources:
     requests:
-      storage: 2Gi
+      storage: {{ new_domain.storage_size }}Gi
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -22,4 +22,4 @@ spec:
   storageClassName: linstor-sc  # This must match the PV's storageClassName
   resources:
     requests:
-      storage: 2Gi
+      storage: {{ new_domain.storage_size }}Gi
