new file:   dashboard/defaultconfigs.py 	new file:   dashboard/forms.py 	modified:   dashboard/models.py 	modified:   dashboard/templates/main/add_domain.html 	modified:   dashboard/templates/main/view_domain.html 	modified:   dashboard/templates/yaml_templates/nginx-configmap_base.yaml 	modified:   dashboard/templates/yaml_templates/nginx_base.yaml 	modified:   dashboard/templates/yaml_templates/php_base.yaml 	modified:   dashboard/templates/yaml_templates/pvc_base.yaml 	modified:   dashboard/urls.py 	modified:   dashboard/views.py

--- a/dashboard/templates/yaml_templates/pvc_base.yaml
+++ b/dashboard/templates/yaml_templates/pvc_base.yaml
@@ -9,7 +9,7 @@ spec:
   storageClassName: linstor-sc  # This must match the PV's storageClassName
   resources:
     requests:
-      storage: {{ new_domain.storage_size }}Gi
+      storage: {{ domain_instance.storage_size }}Gi
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -22,4 +22,4 @@ spec:
   storageClassName: linstor-sc  # This must match the PV's storageClassName
   resources:
     requests:
-      storage: {{ new_domain.storage_size }}Gi
+      storage: {{ domain_instance.storage_size }}Gi
