--- a/dashboard/templates/yaml_templates/nginx_base.yaml
+++ b/dashboard/templates/yaml_templates/nginx_base.yaml
@@ -28,8 +28,8 @@ spec:
       - name: nginx
         resources:
           limits:
-            cpu: "{{ new_domain.cpu_limit }}m"
-            memory: "{{ new_domain.mem_limit }}Mi"
+            cpu: "{{ domain_instance.cpu_limit }}m"
+            memory: "{{ domain_instance.mem_limit }}Mi"
         image: docker.io/laszlokulcsar/nginx:v0.1
         imagePullPolicy: Always
         ports:
