--- a/dashboard/templates/yaml_templates/php_base.yaml
+++ b/dashboard/templates/yaml_templates/php_base.yaml
@@ -45,8 +45,8 @@ spec:
         image: docker.io/laszlokulcsar/php:v0.1
         resources:
           limits:
-            cpu: "{{ new_domain.cpu_limit }}m"
-            memory: "{{ new_domain.mem_limit }}Mi"
+            cpu: "{{ domain_instance.cpu_limit }}m"
+            memory: "{{ domain_instance.mem_limit }}Mi"
         imagePullPolicy: Always
         ports:
         - containerPort: 9001
