modified:   dashboard/templates/restore_templates/98-restore-job.yaml 	modified:   dashboard/views.py

--- a/dashboard/templates/restore_templates/98-restore-job.yaml
+++ b/dashboard/templates/restore_templates/98-restore-job.yaml
@@ -46,7 +46,7 @@ spec:
                   storageClassName: linstor-sc
                   resources:
                     requests:
-                      storage: {{ storage_size }}
+                      storage: {{ storage_size }}Gi
                   dataSource:
                     apiGroup: snapshot.storage.k8s.io
                     kind: VolumeSnapshot
