modified:   dashboard/templates/fw_templates/00-modsec.yaml 	new file:   dashboard/templates/main/pods_status.html 	modified:   dashboard/views.py

--- a/dashboard/templates/fw_templates/00-modsec.yaml
+++ b/dashboard/templates/fw_templates/00-modsec.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 data:
   custom-rules.conf: |
     {% autoescape off %}
-    {% for line in rules.splitlines %}
+    {% for rule in rules %}
+    {% for line in rule.splitlines %}
     {{ line }}
+    {% endfor %}
     {% endfor %}
     {% endautoescape %}
 kind: ConfigMap
