--- a/dashboard/templates/fw_templates/00-modsec.yaml
+++ b/dashboard/templates/fw_templates/00-modsec.yaml
@@ -1,6 +1,22 @@
 apiVersion: v1
 data:
-  custom-rules.conf: |
+  enable-modsecurity: "true"
+  enable-owasp-modsecurity-crs: "false"
+  hsts: "false"
+  log-format-upstream: '{"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr",
+    "x_forwarded_for": "$proxy_add_x_forwarded_for", "request_id": "$req_id", "remote_user":
+    "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time, "status":
+    $status, "vhost": "$host", "request_proto": "$server_protocol", "path": "$uri",
+    "request_query": "$args", "request_length": $request_length, "duration": $request_time,"method":
+    "$request_method", "http_referrer": "$http_referer", "http_user_agent": "$http_user_agent",
+    "request_body": "$request_body" }'
+  modsecurity-snippet: |
+    SecRuleEngine On
+    SecAuditLog /var/log/nginx/modsec_audit/
+    SecAuditLogFormat JSON
+    SecAuditEngine RelevantOnly
+    SecAuditLogParts ABCEFHZ
+    SecAuditLogType Serial
     {% autoescape off %}
     {% for rule in rules %}
     {% for line in rule.splitlines %}
@@ -8,7 +24,9 @@ data:
     {% endfor %}
     {% endfor %}
     {% endautoescape %}
+  proxy-body-size: 100M
+  ssl-redirect: "false"
 kind: ConfigMap
 metadata:
-  name: modsecurity-custom-rules
+  name: nginx-load-balancer-microk8s-conf
   namespace: ingress
