modified:   backup_templates/backup-job-manual.yaml 	modified:   delete_templates/99-domain-delete-job.yaml 	modified:   restore_templates/98-restore-job.yaml 	modified:   yaml_templates/backup-job.yaml 	modified:   yaml_templates/mariadb-job.yaml

--- a/dashboard/templates/backup_templates/backup-job-manual.yaml
+++ b/dashboard/templates/backup_templates/backup-job-manual.yaml
@@ -15,7 +15,7 @@ spec:
                 app: opendkim # because opendkim is running on the same node as kubepanel. Fix this later
             topologyKey: "kubernetes.io/hostname"
       containers:
-      - name: dbclient
+      - name: db-client
         env:
         - name: MARIADB_ROOT_PASSWORD
           valueFrom:
@@ -26,7 +26,7 @@ spec:
           value: "{{ domain_name_underscore }}"
         - name: DBNAME
           value: "{{ domain_name_underscore }}"
-        image: laszlokulcsar/dbclient:v0.1
+        image: laszlokulcsar/db-client:v0.1
         imagePullPolicy: Always
         command:
           - /bin/bash
