--- a/dashboard/templates/delete_templates/99-domain-delete-job.yaml
+++ b/dashboard/templates/delete_templates/99-domain-delete-job.yaml
@@ -10,7 +10,7 @@ spec:
       - name: delete-domain
         image: laszlokulcsar/watchdog:v0.1
         command: ["kubectl",  "delete", "ns", "{{ domain_name_dash }}"]
-      - name: dbclient
+      - name: db-client
         env:
         - name: MARIADB_ROOT_PASSWORD
           valueFrom:
@@ -21,7 +21,7 @@ spec:
           value: "{{ domain_name_underscore }}"
         - name: DBNAME
           value: "{{ domain_name_underscore }}"
-        image: laszlokulcsar/dbclient:v0.1
+        image: laszlokulcsar/db-client:v0.1
         command: ["/bin/bash"]
         args: ["/delete_db.sh"]
       restartPolicy: Never
