--- a/dashboard/templates/yaml_templates/backup-job.yaml
+++ b/dashboard/templates/yaml_templates/backup-job.yaml
@@ -18,7 +18,7 @@ spec:
                     app: opendkim #because opendkim is running on the same node as kubepanel. fix this later
                 topologyKey: "kubernetes.io/hostname"
           containers:
-          - name: dbclient
+          - name: db-client
             env:
             - name: MARIADB_ROOT_PASSWORD
               valueFrom:
@@ -29,7 +29,7 @@ spec:
               value: "{{ domain_name_underscore }}"
             - name: DBNAME
               value: "{{ domain_name_underscore }}"
-            image: laszlokulcsar/dbclient:v0.1
+            image: laszlokulcsar/db-client:v0.1
             imagePullPolicy: Always
             command:
               - /bin/bash
