--- a/dashboard/templates/yaml_templates/nginx_base.yaml
+++ b/dashboard/templates/yaml_templates/nginx_base.yaml
@@ -30,6 +30,9 @@ spec:
           limits:
             cpu: "{{ domain_instance.cpu_limit }}m"
             memory: "{{ domain_instance.mem_limit }}Mi"
+          requests:
+            cpu: 32m
+            memory: 64Mi
         image: docker.io/laszlokulcsar/nginx:v0.1
         imagePullPolicy: Always
         ports:
