modified:   dashboard/templates/backup_templates/backup-job-manual.yaml 	new file:   dashboard/templates/main/backup_logs.html 	modified:   dashboard/urls.py 	modified:   dashboard/views.py

--- a/dashboard/templates/backup_templates/backup-job-manual.yaml
+++ b/dashboard/templates/backup_templates/backup-job-manual.yaml
@@ -57,7 +57,7 @@ spec:
               source:
                 persistentVolumeClaimName: ${NAMESPACE}-pvc
             EOF
-            
+            echo ">>> Starting MariaDB dump at $(date)"
             mysqldump -h mariadb.kubepanel.svc.cluster.local \
               -u root -p"${MARIADB_ROOT_PASSWORD}" "${DBNAME}" \
               > /backup/${SNAP_NAME}.sql
